--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background-color: black;
+}
+
 .hoverAnimation{
     @apply hover:cursor-pointer hover:bg-white hover:bg-opacity-10 rounded-full xl:p-3 w-11 h-11 xl:w-auto xl:h-auto
 }
 
 .iconAnimation {
-    @apply hover:bg-opacity-10 hover:bg-[#1d9bf0] cursor-pointer w-9 h-9 flex items-center justify-center
+    @apply hover:bg-opacity-10 hover:bg-[#1d9bf0] cursor-pointer rounded-full w-9 h-9 flex items-center justify-center
 }
